# c_internel_skill_trainning

./: .gitignore  CMakeLists.txt  hello.cpp  main.cpp  tme.cpp  var.cpp
base/: report.cpp
include/: DefineTest.h  PointTest.h  swap.h
src/: CTJMsg.cpp  DefineTest.cpp  MetC++.cpp  PointTest.cpp  func.cpp  test.cpp  var.cpp
src/base/: report.cpp
src/point_file/: swap.cpp
